Fix the problem that the background color will jump with the amount of content

--- a/src/assets/scss/custom/_bgTwoColor.scss
+++ b/src/assets/scss/custom/_bgTwoColor.scss
@@ -1,4 +1,5 @@
 .bg-twoColor {
+  height: 100vh;
   background: linear-gradient(172.7deg, #FFD370 5.12%, #FFD370 53.33%, #FFD370 53.44%, #FFFFFF 53.45%, #FFFFFF 94.32%);
   background-repeat: no-repeat;
 }
